[package]
name = "slimedrop"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>", "slime <slime@intea.rs>"]
edition = "2024"
publish = false
repository = "https://github.com/Sliman4/slimedrop-contract"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.17.0", features = ["unstable"] }
near-contract-standards = "5.17.0"

[dev-dependencies]
near-workspaces = { version = "0.21.0", features = ["unstable"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
near-sdk = { version = "5.17.0", features = ["unit-testing"] }
near-api = { version = "0.6.1", default-features = false }
near-crypto = "0.32.0"
serial_test = "3.2.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

# fields to configure build with WASM reproducibility, according to specs
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.16.2-rust-1.86.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:74c24d4d912f893198b8b13e01d43e0f78f3b00b3df45bf555a707eb4918a54e"
# list of environment variables names, whose values, if set, will be used as external build parameters
# in a reproducible manner
# supported by `sourcescan/cargo-near:0.10.1-rust-1.82.0` image or later images
passed_env = []
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]
