[package]
name = "test-mt"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = "5.17.0"
near-sdk-contract-tools = { git = "https://github.com/near/near-sdk-contract-tools", rev = "989b27f3fa00ab7e411e64514ebd7cc0be9bfd67" }
